Fixups on QA to cressrefConverter